fix text and image bleeding using overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+body {
+  text-align: left;
+}
+
+p {
+  display:block;
+  vertical-align: middle;
+}
+
 .welcome {
   background: #f9f5ed;
   border: solid 1px #d6d1c9;
@@ -6,7 +15,6 @@
 
 .greenbox {
   background: #f6ffef;
-  padding: 10px;
   border: solid #b9e5c1 1px;
   height: 600px;
 }
@@ -21,6 +29,7 @@ img {
   max-width: 150px;
   max-height: 150px;
   padding: 10px;
+  overflow: auto;
 }
 
 h4 {
@@ -44,18 +53,21 @@ h4 {
 
 #chief {
   float: left;
-  height: 300px;
-  width: auto;
+  max-height: 900px;
+  max-width: 600px;
 }
 .box {
   margin: 2px;
   padding: 10px;
+  overflow: auto;
 }
 
 .purplebox {
   background: #bd99e5;
   border: solid #70588c 1px;
   height: 200px;
+  height: 450px;
+
 }
 
 .purplebox h4 {
